--- a/FirstTask1/app/src/main/res/layout/fragment_one.xml
+++ b/FirstTask1/app/src/main/res/layout/fragment_one.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        tools:listitem="@layout/item"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
