--- a/FirstTask1/app/src/main/res/layout/activity_main.xml
+++ b/FirstTask1/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    
-   <androidx.fragment.app.FragmentContainerView
 
-       android:id="@+id/fragment_container"
-       android:layout_width="match_parent"
-       android:layout_height="600dp"/>
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/nav_graph" />
 
-   <Button
-       android:id="@+id/btn_a"
-       android:layout_width="150dp"
-       android:layout_height="60dp"
-       android:layout_alignParentBottom="true"
-       android:layout_marginBottom="50dp"
-       android:layout_marginStart="30dp"
-       android:text="Pets"
-       />
-   <Button
-       android:id="@+id/btn_b"
-       android:layout_width="150dp"
-       android:layout_height="60dp"
-       android:layout_alignParentBottom="true"
-       android:layout_alignParentRight="true"
-       android:layout_marginBottom="50dp"
-       android:layout_marginEnd="30dp"
-       android:text="Predators"
-       />
-    
-</RelativeLayout>
+
+</FrameLayout>
